cmd+c and cmd+v don't work #35267

Closed
opened 2013-05-08 21:14:18 +02:00 by Sebastian Röthlisberger · 3 comments

%%%--- Operating System, Graphics card ---
osx 10.8.3, macbook pro 6.2, 8GB Ram, gt330m

- Blender version with error, and version that worked ---


- Short description of error ---

Standart OSX copy and Paste does not Work. ctrl+c / ctrl+v works.

cmd+c / cmd+v works for copy Object in 3D Viewport.

it does as well not work in Video Sequence Editor.

It can't be that sometimes it works and sometimes not. This is interrupting to work with. Either cmd+c / cmd+v works everywhere or then nowhere - my opinion.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Go to Node Editor and press cmd+c then cmd+v

%%%

%%%--- Operating System, Graphics card --- osx 10.8.3, macbook pro 6.2, 8GB Ram, gt330m - Blender version with error, and version that worked --- - Short description of error --- Standart OSX copy and Paste does not Work. ctrl+c / ctrl+v works. cmd+c / cmd+v works for copy Object in 3D Viewport. it does as well not work in Video Sequence Editor. It can't be that sometimes it works and sometimes not. This is interrupting to work with. Either cmd+c / cmd+v works everywhere or then nowhere - my opinion. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Go to Node Editor and press cmd+c then cmd+v %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fix in svn, thanks for the report, now works everywhere that I could find.%%%

%%%Fix in svn, thanks for the report, now works everywhere that I could find.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35267
No description provided.