Fix #35267: cmd+v, cmd+c on OS X for copy/paste worked in some editors like the 3D view and text editor but not in the animation editors, node editor and sequencer.